<resources>
    <string name="facebook_app_id">121739291742659</string>
    <string name="fb_login_protocol_scheme">fb121739291742659</string>
    <string name="facebook_client_token">d3dc60ca8f7e70e45c0d9dc6a5a964b3</string>

    <string name="kakao_ad_track_id" translatable="false">3938771709582133633</string>

    <!-- native advertise soon changing-->
    <string name="banner_ad_unit_id">ca-app-pub-7422694427130568/9960320947</string>
    <!-- banner advertise -->
    <string name="banner_ad_id">ca-app-pub-8944137857067935/8779439198</string>






    <string name="app_name">SMS</string>
    <string name="app_full_name">SunMoon Bus Time Scheduler</string>

    <!--        평일/토요일(공휴일)/일요일 타이틀      -->
    <string name="weekday">Weekday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>


    <!--        일정 타이틀      -->
    <string name="sm2cheonan">선문대 → 천안역</string>
    <string name="cheonan2sm"> 천안역 ← 선문대</string>
    <string name="sm2terminal">선문대 → 터미널</string>
    <string name="terminal2sm">터미널 ← 선문대</string>


    <!--        일정 타이틀      -->
    <string name="quick_menu_title">빠른 버스 보기</string>
    <string name="full_menu_title">버스시간표 보기</string>
    <string name="question_menu_title">공지사항 ＆ 사용방법</string>
    <string name="call_menu_title">콜벤 같이 타기</string>

    <!--        일정 타이틀      -->
    <string name="KTX">Cheonan Station</string>
    <string name="Terminal">Terminal Station</string>
    <string name="Onyang">Onyang Station</string>

    <string name="AsanCampus">Asan\nCampus</string>

    <string name="BoardTitle">게시물 목록</string>
    <string name="WRITER">작성자</string>
    <string name="DEPARTMENT">학과</string>

    <string name="OK">OK</string>
    <string name="modify">수정</string>
    <string name="join">가입</string>
    <string name="cancel">취소</string>

    <string name="postinfo">
        ※본명을 사용하지 않거나 학번,학과를 다르게 입력한 경우
        계정이 경고없이 삭제될 수 있습니다.
    </string>


    <!--        post 관련        -->
    <string-array name="wait_time_array">
        <item>5분</item>
        <item>10분</item>
        <item>15분</item>
        <item>20분</item>
        <item>25분</item>
        <item>30분</item>
        <item>40분</item>
        <item>50분</item>
    </string-array>

    <!--        post 관련        -->
    <string-array name="peopleNum_array">
        <item>2명</item>
        <item>3명</item>
        <item>4명</item>
    </string-array>


    <string name="makers">
        이희선(angalle4@gmail.com)
    권수정(0401tnwjd@gmail.com)
    이소원(sowannab@gmail.com)
    김보혜(sweetbobo515@gmail.com)
    선문대학교 셔틀 링크
    http://lily.sunmoon.ac.kr/Page/About/About08_04_01.aspx
    </string>

</resources>
