<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#4fb2b3"
    android:weightSum="5.7"
    >
    <!-- header -->
    <ImageView
        android:layout_width="wrap_content"
        android:src="@drawable/main"
        android:layout_height="match_parent"
        android:layout_weight="0.7"
        android:scaleType="fitXY"/>

    <!-- center -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_weight="2.3"
        android:weightSum="3"
        android:background="#f1f1f2"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1"
            android:weightSum="5"
            android:id="@+id/sch_detail_btn">

            <ImageView
                android:src="@drawable/quick_menu_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:id="@+id/imageView"
                android:adjustViewBounds="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_weight="1"
                android:text="@string/quick_menu_title"
                android:textColor="#58595b"
                android:textSize="11sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1"
            android:weightSum="5"
            android:id="@+id/sch_entry_btn">

            <ImageView
                android:src="@drawable/full_menu_btn"
                android:layout_weight="4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_weight="1"
                android:text="@string/full_menu_title"
                android:textColor="#58595b"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingRight="0dp"
            android:paddingLeft="10dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:weightSum="5"
            android:id="@+id/app_info_btn">
            <ImageView
                android:src="@drawable/question_menu_btn"
                android:layout_weight="4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"/>
            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_weight="1"
                android:text="@string/question_menu_title"
                android:textColor="#58595b"
                android:textSize="11sp" />
        </LinearLayout>
    </LinearLayout>

    <!-- footer -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:gravity="right"
        android:textColor="#FFFFFF"
        android:text="@string/app_full_name"/>
</LinearLayout>
