<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/posting_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f1f2"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="5dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/input_icon"
                        android:id="@+id/imageView7" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="SMS 가 입 하 기"
                        android:textColor="#58595b"
                        android:textStyle="bold"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:orientation="vertical">
                    <!--body-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/user_email"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:background="#ddf0f0"
                            android:hint="ex) sunmoon@univ.co.kr"
                            android:textColor="#555555"
                            android:textColorHint="#6c6c6c"
                            android:maxLength="20"
                            android:paddingLeft="10dp"
                            android:inputType="textEmailAddress"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/user_pw"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:background="#ddf0f0"
                            android:hint="비밀번호는 영소/숫자/특수 4-16자리로 해주세요."
                            android:maxLength="20"
                            android:paddingLeft="10dp"
                            android:textColor="#555555"
                            android:textColorHint="#6c6c6c"
                            android:inputType="textEmailAddress"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/user_name"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:background="#ddf0f0"
                            android:hint="반드시 실명을 입력해주세요."
                            android:maxLength="20"
                            android:paddingLeft="10dp"
                            android:textColor="#555555"
                            android:textColorHint="#6c6c6c"
                            android:inputType="textEmailAddress"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/univ_depart"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:background="#ddf0f0"
                            android:hint="정확한 학과정보를 입력해주세요."
                            android:maxLength="20"
                            android:paddingLeft="10dp"
                            android:textColor="#555555"
                            android:textColorHint="#6c6c6c"
                            android:inputType="textEmailAddress"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="6dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">
                        <EditText
                            android:id="@+id/studentNo_edit"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:background="#ddf0f0"
                            android:hint="정확한 학번을 입력해주세요."
                            android:maxLength="20"
                            android:paddingLeft="10dp"
                            android:textColor="#555555"
                            android:textColorHint="#6c6c6c"
                            android:inputType="textEmailAddress"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingRight="20dp"
                        android:paddingLeft="20dp"
                        android:text="@string/postinfo"
                        android:textColor="#e16175"
                        android:textStyle="bold"
                        android:textSize="15sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_marginTop="40dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/join_btn"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="#e16175"
                        android:gravity="center"
                        android:text="@string/join"
                        android:textColor="#ffffff"
                        android:textSize="25sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/cancel_btn"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="#e16175"
                        android:gravity="center"
                        android:text="@string/cancel"
                        android:textColor="#ffffff"
                        android:textSize="25sp" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <!--    footer  -->

</FrameLayout>