<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f1f2"
    android:weightSum="8">
    <!-- header -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6.2"
        android:layout_gravity="center_vertical">

        <ImageView
            android:layout_height="wrap_content"
            android:src="@drawable/weekbar"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:layout_width="280dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:adjustViewBounds="true" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="270dp"
            android:gravity="center_vertical">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_height="match_parent"
                    android:src="@drawable/weekbar_select"
                    android:layout_width="100dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_centerVertical="true"
                    android:id="@+id/sch_entry_top_bar"
                    android:adjustViewBounds="true" />

                <LinearLayout
                    android:layout_gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_centerVertical="true"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="10dp"
                        android:paddingLeft="12dp"
                        android:textSize="17dp"
                        android:text="WeekDay"
                        android:textStyle="bold"
                        android:id="@+id/sch_entry_weekDay"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="5dp"
                        android:paddingLeft="5dp"
                        android:text="SatureDay"
                        android:textSize="17dp"
                        android:textStyle="bold"
                        android:id="@+id/sch_entry_satureDay"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="10dp"
                        android:paddingLeft="11dp"
                        android:text="SunDay"
                        android:textSize="17dp"
                        android:textStyle="bold"
                        android:id="@+id/sch_entry_sunDay"/>
                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:background="#FFFFFF"
        android:layout_marginRight="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/titlelayoutcorner"
            android:gravity="center_vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Asan\nCampus"
                    android:paddingTop="10dp"
                    android:paddingBottom="5dp"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="#FFFFFF"
                    android:paddingLeft="30dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="right|center_vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/detail_btn"
                        android:adjustViewBounds="true"
                        android:layout_marginRight="10dp"
                        android:id="@+id/detail_btn"/>
                </LinearLayout>
            </LinearLayout>
            <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/expandableLayout"
                android:padding="5dp"
                android:layout_weight="0">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/layoutcorner"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:textColor="#58595b"
                        android:textStyle="bold"
                        android:id="@+id/KTX"
                        android:text="@string/KTX"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:textColor="#58595b"
                        android:textStyle="bold"
                        android:id="@+id/Terminal"
                        android:text="@string/Terminal"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:textColor="#58595b"
                        android:textStyle="bold"
                        android:id="@+id/Onyang"
                        android:text="@string/Onyang"/>

                </LinearLayout>
            </com.github.aakira.expandablelayout.ExpandableRelativeLayout>
        </LinearLayout>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginRight="31.5dp"
                android:layout_marginLeft="25.5dp"
                android:id="@+id/imgDestination"
                android:src="@drawable/sch_detail_cheonan"
                android:adjustViewBounds="false"
                android:layout_gravity="center_horizontal" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="bottom">
                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/sch_entry_list"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">
                </android.support.v7.widget.RecyclerView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:background="@drawable/transparent_background">
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/transparent_background">
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
    <!-- center -->
    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.7"
        android:orientation="vertical"
        android:background="#FFFFFF"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">



    </LinearLayout>-->


    <!--    footer  -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="100dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="30dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="#FFFFFF"
                    android:layout_height="30dp">
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:background="#eeb8b8"
                android:orientation="vertical"
                android:layout_height="70dp">
            </LinearLayout>
        </LinearLayout>


        <ImageView
            android:layout_centerHorizontal="true"
            android:src="@drawable/top_btn"
            android:id="@+id/top_btn"
            android:layout_height="80dp"
            android:layout_width="80dp" />
    </RelativeLayout>

</LinearLayout>